- change swagger + eslint fix
